corpus/basics.txt
================================================================================
numbers
================================================================================

0x12
12345
.12345
0.12345
345.893e-204
5.49e2
0e12
0x

--------------------------------------------------------------------------------

(source_file
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number)))
  (expression (message (number))
    (message (identifier))))

================================================================================
identifiers
================================================================================

1a
hello
musta_rd
m3mm444

--------------------------------------------------------------------------------

(source_file
  (expression (message (number))
    (message (identifier)))
  (expression (message (identifier)))
  (expression (message (identifier)))
  (expression (message (identifier))))

================================================================================
comments
================================================================================

/* this _arst* is a comment */
/* this is
also still a comment */
# soooooo is # this this is a comment
// this is // a comment

--------------------------------------------------------------------------------

(source_file
  (expression (comment))
  (expression (comment))
  (expression (comment))
  (expression (comment)))

================================================================================
expressions
================================================================================

this is an expression
i + 1
i==2
2e1e4
if( # this is a comment
  i == 0,
  /* this is a comment */
  false, true)

--------------------------------------------------------------------------------

(source_file
  (expression
    (message (identifier))
    (message (identifier))
    (message (identifier))
    (message (identifier)))
  (expression
    (message (identifier))
    (message (operator))
    (message (number)))
  (expression
    (message (identifier))
    (message (operator))
    (message (number)))
  (expression
    (message (number))
    (message (identifier)))
  (expression
    (message
      (identifier)
      (arguments
        (argument
          (expression
            (message
              (comment)
              (identifier))
            (message (operator))
            (message (number))))
        (argument
          (expression
            (message
              (comment)
              (identifier))))
        (argument
          (expression
            (message
              (identifier))))))))
